fixed css spacing issues and removed the log that was going to the console every time

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ body {
 
 #bookList .book p {
     font-size: 0.7rem;
+    margin: 0.3rem 0.5rem;
 }
 
 .addBookContainer {
